--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@ h1, h2, h3 {
   box-shadow: 0 2px 0 #004c80;
 }
 
+<!-- Firebase App (core) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+
+<!-- Firebase Auth -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
+
+<!-- ✅ Firebase Realtime Database -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
+
 
   </style>
 </head>
