--- a/admin.html
+++ b/admin.html
@@ -75,141 +75,168 @@
   </div>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBPq6Wfxzq02MfK69BFxHm9_FUjDGTmAcw",
-      authDomain: "kykychat-24c7f.firebaseapp.com",
-      projectId: "kykychat-24c7f"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const auth = firebase.auth();
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+  import { getDatabase, ref, get, set, update, remove, onValue, push, orderByChild, limitToLast, query } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
-    const allowedAdmins = ["canari851", "kykygosed", "Kenzou_TV"];
+  const firebaseConfig = {
+    apiKey: "AIzaSyBPq6Wfxzq02MfK69BFxHm9_FUjDGTmAcw",
+    authDomain: "kykychat-24c7f.firebaseapp.com",
+    databaseURL: "https://kykychat-24c7f-default-rtdb.firebaseio.com",
+    projectId: "kykychat-24c7f"
+  };
 
-    function showSection(id) {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+  const auth = getAuth(app);
+  const allowedAdmins = ["canari851", "kykygosed", "Kenzou_TV"];
 
-    async function loadUsers() {
-      const container = document.getElementById('users');
+  function showSection(id) {
+    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+  }
+
+  async function loadUsers() {
+    const container = document.getElementById('users');
+    container.innerHTML = '<h2>Utilisateurs</h2>';
+    const usersRef = ref(db, "users");
+    onValue(usersRef, (snapshot) => {
       container.innerHTML = '<h2>Utilisateurs</h2>';
-      const snap = await db.collection('users').get();
-      snap.forEach(doc => {
+      snapshot.forEach(child => {
+        const data = child.val();
         const div = document.createElement('div');
         div.className = 'user-entry';
         div.innerHTML = `
-          <span>${doc.id}</span><br>
-          <span>Balance: <span id="bal-${doc.id}">${doc.data().balance?.toFixed(2) || 0}µ</span></span><br>
-          <button class="action-btn" onclick="setBalance('${doc.id}')">Modifier</button>
-          <button class="action-btn" onclick="deleteUser('${doc.id}')">Supprimer</button>
+          <span>${child.key}</span><br>
+          <span>Balance: <span id="bal-${child.key}">${(data.balance || 0).toFixed(2)}µ</span></span><br>
+          <button class="action-btn" onclick="setBalance('${child.key}')">Modifier</button>
+          <button class="action-btn" onclick="deleteUser('${child.key}')">Supprimer</button>
         `;
         container.appendChild(div);
       });
-    }
+    });
+  }
 
-    async function loadOrganisations() {
-      const container = document.getElementById('orgs');
+  async function loadOrganisations() {
+    const container = document.getElementById('orgs');
+    container.innerHTML = '<h2>Organisations</h2>';
+    const orgsRef = ref(db, "organisations");
+    onValue(orgsRef, (snapshot) => {
       container.innerHTML = '<h2>Organisations</h2>';
-      const snap = await db.collection('organisations').get();
-      snap.forEach(doc => {
-        const data = doc.data();
+      snapshot.forEach(child => {
+        const data = child.val();
+        const membersHTML = (data.members || []).map(m => `<span>${m} <button onclick="removeMember('${child.key}','${m}')">✕</button></span>`).join(' ');
         const div = document.createElement('div');
         div.className = 'org-entry';
-        const membersHTML = data.members.map(m => `<span>${m} <button onclick="removeMember('${doc.id}','${m}')">✕</button></span>`).join(' ');
         div.innerHTML = `
-          <strong>${data.name}</strong> (Balance: ${data.balance.toFixed(2)}µ)
-          <br><button class="action-btn" onclick="deleteOrg('${doc.id}')">Supprimer</button>
-          <button class="action-btn" onclick="modifyOrgBalance('${doc.id}')">Modifier balance</button>
+          <strong>${data.name}</strong> (Balance: ${(data.balance || 0).toFixed(2)}µ)
+          <br><button class="action-btn" onclick="deleteOrg('${child.key}')">Supprimer</button>
+          <button class="action-btn" onclick="modifyOrgBalance('${child.key}')">Modifier balance</button>
           <br><strong>Membres :</strong><div class="member-list">${membersHTML}</div>
-          <input type="text" id="add-${doc.id}" placeholder="@pseudo" style="width: 140px;" />
-          <button class="action-btn" onclick="addMember('${doc.id}')">Ajouter membre</button>
+          <input type="text" id="add-${child.key}" placeholder="@pseudo" style="width: 140px;" />
+          <button class="action-btn" onclick="addMember('${child.key}')">Ajouter membre</button>
         `;
         container.appendChild(div);
       });
-    }
-
-    async function loadLogs() {
-      const container = document.getElementById('logs');
-      container.innerHTML = '<h2>Logs</h2>';
-      db.collection("logs").orderBy("timestamp", "desc").limit(50).onSnapshot(snapshot => {
-        container.innerHTML = '<h2>Logs</h2>';
-        snapshot.forEach(doc => {
-          const div = document.createElement('div');
-          div.className = 'log-entry';
-          div.textContent = doc.data().message;
-          container.appendChild(div);
-        });
-      });
-    }
-
-    async function setBalance(userId) {
-      const val = prompt("Nouvelle balance ? (en µ)");
-      const n = parseFloat(val);
-      if (isNaN(n)) return;
-      await db.collection("users").doc(userId).update({ balance: n });
-      document.getElementById("bal-"+userId).textContent = n.toFixed(2)+"µ";
-    }
-
-    async function deleteUser(userId) {
-      if (confirm("Supprimer cet utilisateur ?")) {
-        await db.collection("users").doc(userId).delete();
-        loadUsers();
-      }
-    }
-
-    async function deleteOrg(orgId) {
-      if (confirm("Supprimer cette organisation ?")) {
-        await db.collection("organisations").doc(orgId).delete();
-        loadOrganisations();
-      }
-    }
-
-    async function modifyOrgBalance(orgId) {
-      const val = prompt("Nouvelle balance ? (en µ)");
-      const n = parseFloat(val);
-      if (isNaN(n)) return;
-      await db.collection("organisations").doc(orgId).update({ balance: n });
-      loadOrganisations();
-    }
-
-    async function addMember(orgId) {
-      const input = document.getElementById("add-" + orgId);
-      const pseudo = input.value.trim();
-      if (!pseudo) return;
-      await db.collection("organisations").doc(orgId).update({
-        members: firebase.firestore.FieldValue.arrayUnion(pseudo)
-      });
-      await db.collection("logs").add({
-        message: `${auth.currentUser.displayName} a ajouté ${pseudo} à l'organisation ${orgId}`,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      });
-      loadOrganisations();
-    }
-
-    async function removeMember(orgId, pseudo) {
-      await db.collection("organisations").doc(orgId).update({
-        members: firebase.firestore.FieldValue.arrayRemove(pseudo)
-      });
-      loadOrganisations();
-    }
-
-    auth.onAuthStateChanged(async user => {
-      if (!user) return location.href = "/index.html";
-      const pseudo = user.displayName;
-      if (!allowedAdmins.includes(pseudo)) {
-        document.body.innerHTML = `<div style="color:white;text-align:center;padding:50px;">
-          <h1>Accès refusé</h1>
-          <p>Désolé ${pseudo}, tu n'es pas autorisé à accéder à cette page.</p>
-        </div>`;
-        return;
-      }
-
-      showSection('users');
-      loadUsers();
-      loadOrganisations();
-      loadLogs();
     });
+  }
+
+  async function loadLogs() {
+    const container = document.getElementById('logs');
+    container.innerHTML = '<h2>Logs</h2>';
+    const virementsQuery = query(ref(db, 'virements'), orderByChild('timestamp'), limitToLast(50));
+    onValue(virementsQuery, (snapshot) => {
+      container.innerHTML = '<h2>Logs</h2>';
+      const logs = [];
+      snapshot.forEach(child => {
+        const data = child.val();
+        logs.push(`[💸] ${data.from} → ${data.to} : ${data.amount.toFixed(2)}µ`);
+      });
+      logs.reverse().forEach(log => {
+        const div = document.createElement('div');
+        div.className = 'log-entry';
+        div.textContent = log;
+        container.appendChild(div);
+      });
+    });
+  }
+
+  // Action functions
+  window.setBalance = async function (userId) {
+    const val = prompt("Nouvelle balance ? (en µ)");
+    const n = parseFloat(val);
+    if (isNaN(n)) return;
+    await update(ref(db, "users/" + userId), { balance: n });
+    document.getElementById("bal-" + userId).textContent = n.toFixed(2) + "µ";
+  };
+
+  window.deleteUser = async function (userId) {
+    if (confirm("Supprimer cet utilisateur ?")) {
+      await remove(ref(db, "users/" + userId));
+    }
+  };
+
+  window.deleteOrg = async function (orgId) {
+    if (confirm("Supprimer cette organisation ?")) {
+      await remove(ref(db, "organisations/" + orgId));
+    }
+  };
+
+  window.modifyOrgBalance = async function (orgId) {
+    const val = prompt("Nouvelle balance ? (en µ)");
+    const n = parseFloat(val);
+    if (isNaN(n)) return;
+    await update(ref(db, "organisations/" + orgId), { balance: n });
+  };
+
+  window.addMember = async function (orgId) {
+    const input = document.getElementById("add-" + orgId);
+    const pseudo = input.value.trim();
+    if (!pseudo) return;
+
+    const membersRef = ref(db, "organisations/" + orgId + "/members");
+    const snapshot = await get(membersRef);
+    const members = snapshot.exists() ? snapshot.val() : [];
+    members.push(pseudo);
+    await update(ref(db, "organisations/" + orgId), { members });
+
+    const currentUser = auth.currentUser;
+    const pseudoAdmin = currentUser.displayName;
+    await push(ref(db, "logs"), {
+      message: `${pseudoAdmin} a ajouté ${pseudo} à l'organisation ${orgId}`,
+      timestamp: Date.now()
+    });
+  };
+
+  window.removeMember = async function (orgId, pseudo) {
+    const membersRef = ref(db, "organisations/" + orgId + "/members");
+    const snapshot = await get(membersRef);
+    if (!snapshot.exists()) return;
+
+    const members = snapshot.val().filter(m => m !== pseudo);
+    await update(ref(db, "organisations/" + orgId), { members });
+  };
+
+  // Auth
+  onAuthStateChanged(auth, user => {
+    if (!user) return location.href = "/index.html";
+    const pseudo = user.displayName;
+    if (!allowedAdmins.includes(pseudo)) {
+      document.body.innerHTML = `<div style="color:white;text-align:center;padding:50px;">
+        <h1>Accès refusé</h1>
+        <p>Désolé ${pseudo}, tu n'es pas autorisé à accéder à cette page.</p>
+      </div>`;
+      return;
+    }
+
+    showSection('users');
+    loadUsers();
+    loadOrganisations();
+    loadLogs();
+  });
+</script>
+
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </body>
